--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -18,14 +18,14 @@
     <tr>
       <td><%= movie.title %></td>
       <td><%= movie.author %></td>
-      <td><%= movie.year %></td>
+      <td><%= movie.release_year %></td>
       <td><%= movie.category %></td>
       <td><%= movie.rating %></td>
-      <td><%= movie.watched ? "Yes" : "No" %></td>
+      <td><%= movie.watched ? 'Yes' : 'No' %></td>
       <td>
         <%= link_to "Show", movie_path(movie), class: "btn btn-info btn-sm" %>
         <%= link_to "Edit", edit_movie_path(movie), class: "btn btn-warning btn-sm" %>
-        <%= link_to "Delete", movie_path(movie), method: :delete, data: { confirm: "Are you sure?" }, class: "btn btn-danger btn-sm" %>
+        <%= link_to 'Delete', movie_path(movie), method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-danger' %>
       </td>
     </tr>
   <% end %>
