--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -1,9 +1,28 @@
-<!-- app/views/movies/show.html.erb -->
 <h1><%= @movie.title %></h1>
 <p><strong>Author:</strong> <%= @movie.author %></p>
 <p><strong>Release Year:</strong> <%= @movie.release_year %></p>
 <p><strong>Category:</strong> <%= @movie.category %></p>
 <p><strong>Rating:</strong> <%= @movie.rating %></p>
 <p><strong>Watched:</strong> <%= @movie.watched ? 'Yes' : 'No' %></p>
+
+<%= form_with(model: [@movie, @movie.reviews.build], local: true) do |form| %>
+  <div class="form-group">
+    <%= form.label :content, "Review" %>
+    <%= form.text_area :content, class: "form-control", rows: 4 %>
+  </div>
+
+  <div class="form-group">
+    <%= form.label :rating, "Rating (1-5)" %>
+    <%= form.number_field :rating, class: "form-control", min: 1, max: 5 %>
+  </div>
+
+  <%= form.submit "Add Review", class: "btn btn-primary" %>
+<% end %>
+
+
+<h2>Reviews:</h2>
+<% @movie.reviews.each do |review| %>
+  <p><strong>Rating:</strong> <%= review.rating %> - <%= review.content %></p>
+<% end %>
 
 <%= link_to 'Back to Movies', movies_path %>
