--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -25,7 +25,7 @@
       <td>
         <%= link_to "Show", movie_path(movie), class: "btn btn-info btn-sm" %>
         <%= link_to "Edit", edit_movie_path(movie), class: "btn btn-warning btn-sm" %>
-        <%= link_to 'Delete', movie_path(movie), method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-danger' %>
+        <%= button_to 'Destroy', movie_path(movie), method: :delete, class:"btn btn-danger btn-lg btn-block px-2 mx-2" %>
       </td>
     </tr>
   <% end %>
